--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==2.2.2
 Flask-Compress==1.13
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
